--- a/frontend.html
+++ b/frontend.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
+            #content_box {
+                margin: 2% 20% 50% 20%;
+            }
+            h1 {
+                
+            }
+        </style>
+    </head>
     <body>
-        <h1>
-            DistrAction
-        </h1>
-        <h3>
-            Our goal
-        </h3>
-        <p>
-            Our goal is to allow our users to have a way to stay on task and not get distracted and waste time. We do this by sending a notification to all of the user's friends whenever they waste time or go off track. This allows their friends to shame them if they go off track so they will want to go back on track.
-        </p>
-        <p>
-            I am typing this in DVORAK right now so I will not finish it. OK, cya.
-        </p>
+        <div id = "content_box">
+            <h1>
+                DistrAction
+            </h1>
+            <h3>
+                Our goal
+            </h3>
+            <p>
+                Our goal is to allow our users to have a way to stay on task and not get distracted and waste time. We do this by sending a notification to all of the user's friends whenever they waste time or go off track. This allows their friends to shame them if they go off track so they will want to go back on track.
+            </p>
+            <h3>
+                How does it work?
+            </h3>
+            <p>
+                You sign up for an account on this site, you create a RescueTime account and install it on your computer, and you provide us with your API token. We will then be able to track your activities on your computer and notify your friends when you start to waste time.
+            </p>
+            <h3>
+                How much does it cost?
+            </h3>
+            <p>
+                Absolutely nothing! Our service is completely open source and provided free of charge. Anybody can use it, as long as they have a RescueTime account and have it installed on their computer. 
+            </p>
+            <h3>
+                What do you need?
+            </h3>
+            <p>
+                A RescueTime account and some friends to notify when you start to waste time.
+            </p>
+        </div>
     </body>
 </html>
